--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.16",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.4.3",
